--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-my code is better than your code
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Git Repo Fun</title>
+</head>
+<body>
+
+	<header><h1>About Git</h1></header>
+	<p>Git is a popular version control software that offers an incredibly flexible platform for team to work concurrenty on the same code base.</p>
+	
+</body>
+</html>
