added paragraph about merge

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 	<header><h1>About Git</h1></header>
 	<p>Git is a popular version control software that offers an incredibly flexible platform for team to work concurrenty on the same code base.</p>
+	<p>We'll be learning about merge conflicts.</p>
 	
 </body>
 </html>
