--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<header><h1>About Git</h1></header>
+	<header><h1>New About Git</h1></header>
 	<p>Git is a popular version control software that offers an incredibly flexible platform for team to work concurrenty on the same code base.</p>
 	<p>We'll be learning about how to fetch and merge changes.</p>
 	
